<resources>
    <string name="app_name" translatable="false">Super Market</string>
    <string name="login">Login</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="not_registered_yet_click_here_to">Don\'t have account? click here</string>
    <string name="signup">SignUp</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="_20">+20</string>
    <string name="enter_received_code_here">enter received code here</string>
    <string name="next">Next</string>
    <string name="invalid_number">Invalid Phone Number</string>
    <string name="empty_number">Please enter your number</string>
    <string name="empty_password">please enter your password</string>
    <string name="empty_data">please enter your data</string>
    <string name="empty_email">please enter your email</string>
    <string name="invalid_email">email invalid</string>
    <string name="empty_name">please enter your name</string>
    <string name="match_password_erroe">Passwords are not the same</string>
    <string name="confirm">Confirm</string>

    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>


    <string name="no_connection_error_message">Well…, there\'s no internet connection. Please, Check it and try again</string>
    <string name="client_side_error_message">We couldn\'t get what you\'re looking for. Please, try again later</string>
    <string name="server_side_error_message">Our servers are overloaded at the moment. Please, try again later</string>
    <string name="api_query_limit_exceeded_error_message">The API query limit has been exceeded. Please, try again later</string>
    <string name="unknown_host_exception_and_socket_timeout_exception_message">Please, check your internet connection and try again later</string>
    <string name="ssl_handshake_exception_message">The network you\'re connected to is unsafe. Please, change it and try again later</string>
    <string name="generic_exception_and_generic_error_message">An error occurred. Please, try again later</string>
    <string name="anErrorOccured">An Error Occured</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="invalid_data">Invalid Data</string>
    <string name="reset_password">Reset Password</string>
    <string name="product_image">Product Image</string>
    <string name="no_products_found">No Products Found!</string>
    <string name="description">Description</string>
    <string name="eg">EG</string>
    <string name="search">Search</string>
    <string name="checkout">Checkout</string>
    <string name="icon_back">Icon Back</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="confirm_order">Order Confirmation</string>
    <string name="building_number">Building no.</string>
    <string name="flat_number">Flat no.</string>
    <string name="the_street">Street</string>
    <string name="products">Products</string>
    <string name="total_cost">Total Cost :</string>
    <string name="order_details">Order Info</string>
    <string name="delivering_address">Delivering Address</string>
    <string name="price_formate">%f EGP</string>
    <string name="successfully_added_to_cart">Added Successfully</string>
    <string name="create_account">Create Account</string>
    <string name="future_shopping">Future Shopping</string>
    <string name="user_image">User Image</string>
    <string name="logout">Logout</string>
    <string name="dummy_address" translatable="false">6, Gamal Abdelkader Street, Cairo</string>
    <string name="address">Address</string>

    <string name="update_successfully">updated</string>
    <string name="update_failed">update failed</string>
    <string name="login_as_guest">Login As Guest</string>
    <string name="login_to_own_cart">Login to own cart</string>
    <string name="categories">Categories</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="previous">Previous</string>


    <string name="apartment_num">Apartment Num</string>
    <string name="building_num">Building Num</string>
    <string name="street">Street</string>
    <string name="address_note">Address Note</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="pick_another_address">pick another address</string>

</resources>