<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="address"
            type="com.app.supermarket.presentation.main.settings.address.UserAddressUiState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.main.settings.address.AddressActivity">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBarAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/address"
                app:titleTextColor="?attr/colorPrimary"
                app:titleCentered="true"
                app:navigationIcon="@drawable/arrow_back"/>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_apartment_num"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apartment_num"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarAddress"
            app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_apartment_num"
                android:layout_width="match_parent"
                android:text="@{address.apartmentNum}"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_building_num"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/building_num"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_apartment_num"
            app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_building_num"
                android:layout_width="match_parent"
                android:text="@{address.buildingNum}"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_street"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_building_num"
            app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_street"
                android:layout_width="match_parent"
                android:text="@{address.street}"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_address_note"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/address_note"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_street"
            app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_address_note"
                android:layout_width="match_parent"
                android:gravity="top"
                android:text="@{address.addressNotes}"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="24dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/til_address_note"
            app:layout_constraintStart_toStartOf="@+id/til_address_note" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>