<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="address"
            type="com.app.supermarket.presentation.address.UserAddressUiState" />

        <variable
            name="Listener"
            type="com.app.supermarket.presentation.address.mainaddress.MainAddressListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.address.AddressActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appBarAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/toolBarAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/address"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back"
                android:padding="5dp"
                android:onClick="@{()-> Listener.clickBack()}"
                app:layout_constraintBottom_toBottomOf="@+id/toolBarAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolBarAddress" />


            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginEnd="5dp"
                android:onClick="@{()-> Listener.clickSaveEdit()}"
                android:text="@string/edit"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/toolBarAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolBarAddress" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_apartment_num"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apartment_num"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarAddress"
            app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_apartment_num"
                android:layout_width="match_parent"
                android:enabled="false"
                android:text="@{address.apartmentNum}"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_building_num"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/building_num"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_apartment_num"
            app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_building_num"
                android:layout_width="match_parent"
                android:enabled="false"
                android:text="@{address.buildingNum}"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_street"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_building_num"
            app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_street"
                android:layout_width="match_parent"
                android:text="@{address.street}"
                android:enabled="false"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_address_note"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/address_note"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_street"
            app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_address_note"
                android:layout_width="match_parent"
                android:gravity="top"
                android:enabled="false"
                android:text="@{address.addressNotes}"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:onClick="@{()-> Listener.clickPickAnotherAddress()}"
            android:layout_marginBottom="24dp"
            android:text="@string/pick_another_address"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/til_address_note"
            app:layout_constraintStart_toStartOf="@+id/til_address_note" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>